# xiaoyi-claw-omega-final

./: .env.production  .gitignore  AGENTS.md  ARCHITECTURE_UPGRADE_V9.md  BOOTSTRAP.md  CHANGELOG.md  CLEAN_PACKAGE_REPORT.txt  CONNECTED_RUNTIME_DEVICE_VALIDATION_REPORT.txt  CONNECTED_RUNTIME_PROBE_REPORT.txt  CONNECTED_RUNTIME_VALIDATION_REPORT.txt  DEPLOY.md  DEPLOY_VERIFICATION.txt  DEPLOY_VERIFICATION_V2.txt  Dockerfile.message-server  Dockerfile.task-daemon  E2E_ROUTE_SCENARIO_REPORT.txt  E2E_ROUTE_SCENARIO_REPORT_V2.txt  EXACT_SKILL_REFACTOR_VERIFICATION.txt  EXACT_SKILL_REFACTOR_VERIFICATION_V3.txt  FINAL_OPERATIONS_AND_DEMO_REPORT.txt  FINAL_RELEASE_READINESS_REPORT.txt  FULL_AUTOMATION_AGENT_REPORT.txt  FULL_WORKSPACE_RESTORE_REPORT.txt  HEARTBEAT.md  IDENTITY.md  INDEPENDENT_VALIDATION_v8.3.0.txt  INSPECTION_REPORT.txt  LEARNING_LOOP_REAL_REUSE_REPORT.txt  MEMORY.md  Makefile  NOTIFICATION_AUTH_GUIDE.md  NOTIFICATION_CONFIG_STATUS.txt  ORPHAN_COMPONENTS_REPORT.txt  PATH_UNIFICATION_DELIVERY.txt  PATH_UNIFICATION_REPORT.txt  PLATFORM_AUDIT_OPERATIONS.md  PLATFORM_CONNECTION_MATRIX.md  PLATFORM_EXECUTION_REPORT.txt  PLATFORM_OPERATIONS_AUTOMATION_REPORT.txt  PLATFORM_OPERATIONS_REPORT.txt  (+44 more)
.clawhub/: lock.json  publish.json
.learnings/: LEARNINGS.md
.openclaw/: workspace-state.json
autonomous_planner/: __init__.py  goal_parser.py  plan_schema.py  route_selector.py  skill_selector.py  task_decomposer.py
cache/: cache_config.json  gui_learned_templates.json  gui_operation_history.json
capabilities/: __init__.py  approve_action.py  audit_queries.py  cancel_notification.py  check_calendar_conflicts.py  create_alarm.py  create_album.py  create_contact.py  delete_alarm.py  delete_calendar_event.py  delete_contact.py  delete_file.py  delete_note.py  delete_photo.py  delete_xiaoyi_note.py  diagnostics.py  explain_invocation_status.py  explain_message_result.py  explain_notification_auth_state.py  get_location.py  list_calendar_events.py  list_recent_messages.py  list_recent_notes.py  make_call.py  manage_file.py  pause_task.py  preview_side_effect.py  query_alarm.py  query_calendar_event.py  query_contact.py  query_file.py  query_message_status.py  query_note.py  query_notification_status.py  query_photo.py  query_xiaoyi_note.py  refresh_notification_auth.py  registry.py  resend_message.py  resume_task.py  (+9 more)
closed_loop_verifier/: __init__.py  audit_writer.py  final_summarizer.py  recovery_manager.py  result_checker.py
config/: __init__.py  capability_timeouts.json  dependency_manifest.json  feature_flags.py  injection_config.json  injection_config_minimal.json  injection_config_smart.json  resource_paths.py  runtime_modes.py  runtime_policy.yaml  safety_controls.py  settings.py  unified.json
core/: ARCHITECTURE.md  ARCHITECTURE_FREEZE_1_0.md  ARCHITECTURE_QUICK_REFERENCE.md  CAPABILITY_MAP.md  FUSION_POLICY.md  LAYER_DEPENDENCY_MATRIX.md  LAYER_DEPENDENCY_RULES.json  LAYER_IO_CONTRACTS.md  README_UPGRADE.md  RELEASE_EVIDENCE_POLICY.md  RULE_EXCEPTIONS.json  RULE_EXCEPTION_DEBT_POLICY.md  (+8 more)
(+9222 files in other folders)
