[project]
name = "openclaw-workspace"
version = "7.0.0"
description = "OpenClaw AI Assistant Workspace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Team"}
]
keywords = ["ai", "assistant", "openclaw", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]
vector = [
    "qdrant-client>=1.17.1",
    "chromadb>=1.5.7",
    "faiss-cpu>=1.13.2",
]
document = [
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "openpyxl>=3.1.0",
    "reportlab>=4.0.0",
]
database = [
    "pymongo>=4.6.0",
    "pymysql>=1.1.0",
    "sqlalchemy>=2.0.0",
    "elasticsearch>=8.12.0",
]

[project.scripts]
openclaw = "infrastructure.cli:main"

[project.urls]
Homepage = "https://openclaw.ai"
Documentation = "https://docs.openclaw.ai"
Repository = "https://github.com/openclaw/openclaw"
Issues = "https://github.com/openclaw/openclaw/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["infrastructure*", "execution*", "governance*", "orchestration*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"
