[project]
name = "openclaw-workspace"
version = "8.2.4"
description = "OpenClaw AI Assistant Workspace"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "OpenClaw Team"}
]

dependencies = [
    "pydantic>=2.0.0",
    "croniter>=2.0.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio==0.23.6",
    "black>=24.0.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[project.scripts]
openclaw = "infrastructure.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "infrastructure*",
    "execution*",
    "governance*",
    "orchestration*",
    "application*",
    "domain*",
    "core*",
    "memory_context*",
    "skills*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"
